# clean-paste

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
builds/windows/: clean-paste_0.1.0_x64_en-US.msi
scripts/: iconGenerator.js
src/: App.tsx  Router.tsx  common.scss  main.tsx
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  constants.rs  listen_for_double_ctrl_or_cmd.rs  main.rs
src-tauri/src/utils/: logging.rs  utils.rs
src/assets/: icon.icns
src/components/: index.ts
src/components/Accordion/: Accordion.module.scss  Accordion.tsx
src/components/App/: App.module.scss  App.tsx
src/components/Config/: Config.module.scss  Config.tsx  index.ts  utils.ts
src/components/Config/components/: index.ts
src/components/Config/components/HotkeyInput/: HotkeyInput.module.scss  HotkeyInput.tsx  index.ts  utils.ts
src/components/Config/components/Label/: Label.module.scss  Label.tsx
src/components/Link/: Link.tsx
src/components/Main/: Main.module.scss  Main.tsx
src/components/Main/components/: index.ts
src/components/Main/components/Desc/: Desc.module.scss  Desc.tsx
src/components/Main/components/Footer/: Footer.module.scss  Footer.tsx
src/components/Main/components/Header/: Header.module.scss  Header.tsx
src/components/RadioButton/: RadioButton.module.scss  RadioButton.tsx
src/components/SubTitle/: SubTitle.module.scss  SubTitle.tsx  index.ts
src/styles/: __functions.scss  __mixins.scss  common.scss
src/utils/: globalShortcuts.ts  settings.ts  utils.ts
(+6 files in other folders)
