[package]
name = "clean-paste"
version = "0.1.0"
description = "text formatting remover app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clean_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-global-shortcut = "2"
arboard = "3"
tauri-plugin-notification = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-error = "0.2"
tracing-appender = "0.2"
rdev = "0.5"
single-instance = "0.3"
interprocess = "2.2.3"
dirs = "6.0.0"
device_query = "4.0.1"
tauri-plugin-os = "2"
